--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <img src="images/Felipe.jpeg" class="img-circle" width="150px" alt="Felipe's picture">
 
-  <p>I am a lawyer who have found a passion for coding. Sometimes I try random stuff, did you know that I tried to have a youtube channel once? 🎥</p>
+  <p>I am a lawyer who has found a passion for coding. Sometimes I try random stuff, did you know that I tried to have a youtube channel once? 🎥</p>
 
   <a href="https://www.youtube.com/watch?v=Z5IoK_nrMN0" class="btn-blue" target="_blank">Check my animation</a>
 
